--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -14,22 +14,15 @@
     vertical-align: middle; 
  }
 
-.landing-text {
-        display: table-cell;
-        text-align: center;
-        vertical-align: middle;
-        z-index: 100;
-    }
-
-.landing-text h1 {
+h1.landing-text {
         color: white;
         font-size: 500%;
         font-weight: 700;
         -webkit-text-stroke: 2px black;
-
+        justify-content: center;
     }
 
-.landing-text h3 {
+h3.landing-text {
         color:white;
         text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
     }
