--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -66,3 +66,10 @@ p1 {
 p1:hover {
     color: #dc3545;
 }
+
+.confirm {
+    margin: auto;
+    margin-bottom: 25px;
+    justify-content: center;
+    width: 75%;
+}
