KD: Added table of showings to currentmovies.

--- a/frontend/src/Components/Listings/CurrentMovies.css
+++ b/frontend/src/Components/Listings/CurrentMovies.css
@@ -16,6 +16,7 @@ h1.landing-text {
 .bgBlur{
     background:transparent !important;
     backdrop-filter: blur(5px);
+    padding-top: 100;
 }
 
 .cardHoverZoom:hover {
