--- a/frontend/src/Components/Listings/ReleasedMovie.css
+++ b/frontend/src/Components/Listings/ReleasedMovie.css
@@ -28,3 +28,14 @@
 .landing-movie-title h3 {
         color:white;
     }
+
+.cardImg {
+    height: auto; 
+    width: auto; 
+    max-width: 300px; 
+    max-height: 300px;
+}    
+.card-deck {
+    margin: 0 auto;
+    display: flex;
+}
