--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -1,5 +1,5 @@
  .background {
-    background-image: linear-gradient(rgba(0,0,0,0),hsl(0,0%,0%, 1)),url("../Images/QA-Cinema-BG.png");
+    background-image: linear-gradient(rgba(0,0,0,0),hsl(0,0%,0%, 1)),url("../Images/QA-Cinema BG.png");
     background-color: #343A40;
     background-position: center;
     background-size: 40%;
