--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -1,8 +1,7 @@
  .background {
     background-image: linear-gradient(rgba(0,0,0,0),hsl(0,0%,0%, 1)),url("../Images/QA-Cinema BG.png");
     background-color: #343A40;
-    background-position: center;
-    background-size: 40%;
+    background-size: 50%;
     height: 100%;
  }
 
@@ -18,6 +17,17 @@
  .container2 {
      height: 100vh;
  }
+
+
+.center {
+  padding: 70px 0;
+  text-align: center;
+}
+
+#name {
+    width: 100%;
+
+}
 
 h1.landing-text {
         color: white;
@@ -65,4 +75,11 @@ p1 {
 }
 p1:hover {
     color: #dc3545;
+}
+
+.confirm {
+    margin: auto;
+    margin-bottom: 25px;
+    justify-content: center;
+    width: 75%;
 }
