--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -1,6 +1,6 @@
  .background {
     background-image: linear-gradient(rgba(0,0,0,0),hsl(0,0%,0%, 1)),url("../Images/Updated BG2.png");
-    background-color: #343A40;
+    background-color: #212121;
     background-size: 50%;
     height: 100%;
  }
@@ -14,16 +14,24 @@
     vertical-align: middle; 
  }
 
- .container2 {
+ .fullScreen {
      height: 100vh;
  }
 
-
+.colorScheme {
+    background-color: #A02626;
+}
 .center {
   padding: 70px 0;
   text-align: center;
 }
+#tableBorder tr td {
+   border-top: 1px solid #A02626; /* Change the color you want to set */
+}
 
+#tableBorder tr th {
+   border-top: 1px solid #A02626; /* Change the color you want to set */
+}
 #name {
     width: 100%;
 
@@ -82,4 +90,9 @@ p1:hover {
     margin-bottom: 25px;
     justify-content: center;
     width: 75%;
+}
+
+.bgBlur{
+    background:transparent !important;
+    backdrop-filter: blur(3px);
 }
