--- a/frontend/src/Components/Navbar/NavBar.css
+++ b/frontend/src/Components/Navbar/NavBar.css
@@ -1,9 +1,7 @@
-
-.Footer {
-background: linear-gradient(88deg, #212121, #000000);
-  background-size: 400% 400%;
-  color: white;
-  height: 75px;
+.NavBar {
+    background: linear-gradient(88deg, #212121, #000000);
+    background-size: 400% 400%;
+ 
 
     -webkit-animation: AnimationName 10s ease infinite;
 
@@ -26,4 +24,4 @@ background: linear-gradient(88deg, #212121, #000000);
     0%{background-position:0% 35%}
     50%{background-position:100% 66%}
     100%{background-position:0% 35%}
-}  
+}
