--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -100,6 +100,10 @@ p1:hover {
 }
 
 .bgBlur{
-    background:transparent !important;
+    /* background:transparent !important; */
     backdrop-filter: blur(3px);
+}
+
+h2{
+    color: white;
 }
