CP-52 AI: Updated styling for nearby places

--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -80,12 +80,7 @@ p {
         padding-bottom: 200px;
     }
 
-.display-4, .lead{
-    
-    color: white;
-}
-
-p1 {
+.display-4, .lead, p1{  
     color: white;
 }
 p1:hover {
@@ -103,3 +98,32 @@ p1:hover {
     background:transparent !important;
     backdrop-filter: blur(3px);
 }
+
+.padd-1{
+    padding: 1rem;
+}
+.padd-3{
+      padding: 3rem;
+}
+padd-5{
+    padding:5rem;
+}
+.marg-1 {
+    margin: 1rem;
+}
+.marg-3 {
+    margin: 3rem;
+}
+.txt-area{
+    text-align: justify;
+}
+.c-w{
+    color: white;
+}
+.c-g{
+    color: #212121;
+}
+.c-b{
+    color: black;
+}
+
