--- a/frontend/src/Components/Navbar/NavBar.css
+++ b/frontend/src/Components/Navbar/NavBar.css
@@ -30,3 +30,11 @@
     background-color: #A02626;
     color: white;
 }
+
+.dropdown-menu.show { 
+    background-color: #A02626; 
+}
+
+a.dropdown-item { 
+    color: white; 
+}
