--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -115,6 +115,7 @@ p1:hover {
 }
 .txt-area{
     text-align: justify;
+    text-align:center;
 }
 .c-w{
     color: white;
@@ -127,6 +128,15 @@ p1:hover {
 }
 .bg-t{
     background-color: rgba(0, 0, 0, 0.3);
+}
+.min-h {
+    min-height: 100px;
+}
+.min-w {
+    min-width: 100%;
+}
+.main-border {
+    border: 1px solid #A02626;
 }
 
 
