--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -22,9 +22,6 @@
     background-color: #A02626;
 }
 
-.colorScheme2 {
-    background-color: #212121;
-}
 
 #movie-card {
     width: 75%;
@@ -83,7 +80,12 @@ p {
         padding-bottom: 200px;
     }
 
-.display-4, .lead, p1{  
+.display-4, .lead{
+    
+    color: white;
+}
+
+p1 {
     color: white;
 }
 p1:hover {
@@ -98,43 +100,6 @@ p1:hover {
 }
 
 .bgBlur{
-    /* background:transparent !important; */
+    background:transparent !important;
     backdrop-filter: blur(3px);
-}
-
-.rounded {
-  padding: 10px;
-  border-radius: 50px;
-}
-.padd-1{
-    padding: 1rem;
-}
-.padd-3{
-    padding: 3rem;
-}
-.marg-1 {
-    margin: 1rem;
-}
-.marg-3 {
-    margin: 3rem;
-}
-.txt-area{
-    text-align: justify;
-}
-.c-w{
-    color: white;
-}
-.c-g{
-    color: #212121;
-}
-.c-b{
-    color: black;
-}
-.bg-t{
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-
-h2{
-    color: white;
 }
