CP-52 AM: Edited styling on comment modal.

--- a/frontend/src/Components/Forum/ForumLandingPage.css
+++ b/frontend/src/Components/Forum/ForumLandingPage.css
@@ -33,3 +33,8 @@ h1.landing-text {
 .cardComementMovieText {
     text-align: left;
 }
+
+.commentModal .modal-content{
+    background-color: #A02626;
+    color: white;
+}
