--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -138,10 +138,13 @@ p1:hover {
     color: #A02626;
 }
 .bg-t{
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 .min-h {
     min-height: 120px;
+}
+.min-h-50{
+    min-height:50px;
 }
 .min-w {
     min-width: 100%;
