KD: Refactored redudant code and css.

--- a/frontend/src/CSS/Pages.css
+++ b/frontend/src/CSS/Pages.css
@@ -1,5 +1,5 @@
  .background {
-    background-image: linear-gradient(rgba(0,0,0,0),hsl(0,0%,0%, 1)),url("../Images/Updated BG2.png");
+    background-image: linear-gradient(rgba(0,0,0,0),hsl(0,0%,0%, 1)),url("../Images/Background.png");
     background-color: #212121;
     background-size: 50%;
     height: 100%;
